deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kamishibai
  labels:
    app.kubernetes.io/name: kamishibai
